# Mandala

./: .gitignore
Mandala/: .gitignore  CMakeLists.txt  Mandala.pro  mainwindow.ui
Mandala/header/lib/command/: command.h
Mandala/header/lib/images/: Drawable.h  DrawerUtility.h  Form.h  Image.h  Pixel.h
Mandala/header/lib/images/forms/: Form.h  FormSet.h  LineForm.h  PixelForm.h  PixmapForm.h
Mandala/header/ui/: IconsView.h  MainWindow.h  MandalaPainter.h  Palette.h  ShapeViewer.h  formpainter.h  mainwindow.h  palette.h  shapeviewer.h
Mandala/src/: main.cpp
Mandala/src/lib/images/: DrawerUtility.cpp  Form.cpp  Image.cpp
Mandala/src/lib/images/forms/: Form.cpp  FormSet.cpp  LineForm.cpp  PixelForm.cpp  PixmapForm.cpp
Mandala/src/ui/: IconsView.cpp  MainWindow.cpp  MainWindow.ui  MandalaPainter.cpp  Palette.cpp  Palette.ui  ShapeViewer.cpp  formpainter.cpp  icons.qrc  mainwindow.cpp  mainwindow.ui  palette.cpp  palette.ui  shapeviewer.cpp
Mandala/ui/: mainwindow.ui
build-Mandala-Desktop-Debug/: Makefile  Mandala  moc_mainwindow.cpp  ui_mainwindow.h
